--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js",
+    "start": "npm run dev",
     "dev": "cross-env NODE_ENV=dev nodemon ./index.js",
     "prd": "cross-env NODE_ENC=production nodemon ./bin/index.js"
   },
